Fix issues reported by FindBugs plugin.