@@ -99,7 +99,7 @@ public class QuadInterpreter extends joeq.Compiler.Quad.QuadVisitor.EmptyVisitor
             } else if (paramTypes[i] == jq_Primitive.SHORT) {
                 param[i-offset] = new Short((short)getReg_I(plo.get(i).getRegister()));
             } else if (paramTypes[i] == jq_Primitive.BOOLEAN) {
-                param[i-offset] = new Boolean(getReg_I(plo.get(i).getRegister()) != 0);
+                param[i-offset] = Boolean.valueOf(getReg_I(plo.get(i).getRegister()) != 0);
             } else {
                 param[i-offset] = getReg(plo.get(i).getRegister());
             }
